# website-spec-audit

./: .gitignore  README.md  pyproject.toml
src/website_spec_audit/: __init__.py  base.py  cli.py  context.py  models.py  output.py  registry.py  runner.py
src/website_spec_audit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/website_spec_audit/validators/: __init__.py
src/website_spec_audit/validators/accessibility/: __init__.py  accessibility_overlays.py  aria_usage.py  captions_and_transcripts.py  color_contrast.py  css_state_selectors.py  data_tables.py  document_language.py  empty_links_buttons.py  focus_indicators.py  form_errors.py  form_labels.py  hidden_until_found.py  image_alt_text.py  keyboard_navigation.py  link_text.py  native_interactive_elements.py  reduced_motion.py  semantic_html.py  skip_links.py  touch_target_size.py
src/website_spec_audit/validators/agent_readiness/: __init__.py  a2a_agent_cards.py  agent_readiness_overview.py  agent_skills_discovery.py  content_signals.py  dns_aid.py  link_headers.py  llms_full_txt.py  llms_txt.py  machine_readable_formats.py  markdown_source_endpoints.py  mcp_and_tool_discovery.py  nlweb.py  robots_for_ai_crawlers.py  schemamap.py  stable_urls.py  structured_data_for_agents.py  web_bot_auth.py  webmcp.py
src/website_spec_audit/validators/foundations/: __init__.py  canonical_url.py  color_scheme.py  doctype.py  favicons.py  feed_discovery.py  feed_hygiene.py  html_lang.py  meta_charset.py  meta_description.py  meta_viewport.py  open_graph.py  popover_api.py  theme_color.py  (+1 more)
(+83 files in other folders)
