[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "website-spec-audit"
version = "0.1.0"
description = "Audit websites against specification.website"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "lxml>=5.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.scripts]
website-spec-audit = "website_spec_audit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]
